# pnrXplore

./: .gitignore  README.md  app.py  manager.py  page_eval_elements.py  page_eval_generator.py  page_helper.py  page_upload.py  setup.cfg
archive/: __init__.py  pnrxplore_archive.py  pnrxplore_control.py  pnrxplore_dash_item.py  pnrxplore_dash_line.py  pnrxplore_dash_video.py  pnrxplore_subpage.py  pnrxplore_video_select.py
example/: bundle.py  data.json
pages_eval/static/: ps_general.py  ps_helper.py
pnrXplore/: __init__.py  pnrxplore_archive.py  pnrxplore_bundle.py  pnrxplore_control_box_select.py  pnrxplore_control_slider_select.py  pnrxplore_dash_item.py  pnrxplore_dash_state_image.py  pnrxplore_dashboard.py  pnrxplore_page.py  pnrxplore_subpage.py
pnrXplore/controls/: __init__.py  pnrxplore_control.py  pnrxplore_control_box_select.py  pnrxplore_control_slider_select.py
pnrXplore/dashboard/: __init__.py  pnrxplore_dash_item.py  pnrxplore_dash_line.py  pnrxplore_dash_state_image.py  pnrxplore_dashboard.py
pnrXplore/templates/: __init__.py  pnrxplore_cinema.py  pnrxplore_nextpnr_viewer.py  pnrxplore_notes.py  pnrxplore_overview.py  pnrxplore_playground.py  pnrxplore_template.py  pnrxplore_template_page.py
