[metadata]
name = pnrXplore
version = 0.1.0
author = Meinhard Kissich
author_email = privat@meinhard-kissich.at
description = Create and archive for pnrXplore-viewer
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/meiniKi/pnrXplore
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.8
install_requires =
    ujson>=5.8.0
